# beegraph

./: README.md  Theory.md  beegraph.cabal  cabal.project  flake.nix  hie.yaml  pltest.cabal
src/: BeeEff.hs  Beegraph.hs  Beegrapher.hs  Main.hs  Match.hs  Relation.hs  algo.md
