cabal-version:      2.4
name:               beegraph
version:            0.1.0.0
license:            MIT
copyright:          2021 Sofia M.A
maintainer:         sofia.ma@protonmail.com
author:             Sofia M.A
-- category:         
-- synopsis:
-- description:
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

executable beegraph
  build-depends:
    , array
    , assoc
    , base
    , bifunctors
    , bytestring
    , comonad
    , comonad-extras
    , containers
    , data-fix
    , equivalence
    , functor-combinators
    , hashable
    , haskeline
    , lens
    , mtl
    , optparse-applicative
    , prettyprinter
    , profunctors
    , recursion-schemes
    , relude
    --, sofialude
    , semialign
    , smash
    , souffle-haskell
    , STMonadTrans
    , tagged
    , text
    , these
    , time
    , transformers
    , trifecta
    , unordered-containers
    , validation
    , vector
    
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)
    -- sofialude (Sofialude as Prelude)

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FunctionalDependencies
    GADTs
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MonadComprehensions
    NoMonomorphismRestriction
    MultiParamTypeClasses
    MultiWayIf
    NegativeLiterals
    NumDecimals
    NumericUnderscores
    OverloadedLists
    OverloadedStrings
    ParallelListComp
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    NoStarIsType
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeInType
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  main-is:            Main.hs
  other-modules:      Beegraph BeeEff
  cxx-options:
    -D__EMBEDDED_SOUFFLE__
    -std=c++17
  cxx-sources:
    -- src/sema.cpp
  hs-source-dirs:     src
  default-language:   Haskell2010
